# cc-switch

./: Cargo.toml
.github/workflows/: cli-release.yml
cc-switch-cli/: Cargo.toml  build.sh
cc-switch-cli/src/: main.rs  output.rs
cc-switch-cli/src/commands/: backup.rs  mod.rs  provider.rs
cc-switch-cli/tests/: integration_test.rs
cc-switch-core/: Cargo.toml
cc-switch-core/src/: config.rs  error.rs  lib.rs  provider.rs
cc-switch-core/src/database/: backup.rs  mod.rs  schema.rs
cc-switch-core/src/database/dao/: mod.rs  providers.rs
cc-switch-core/tests/: database_test.rs
docs/: cli-guide.md
homebrew/: cc-switch.rb
src-tauri/: tauri.conf.json
src-tauri/scripts/: bundle-cli.sh
