[workspace]
members = ["src-tauri", "cc-switch-core", "cc-switch-cli"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
toml = "0.8"
toml_edit = "0.22"
log = "0.4"

# CLI-specific
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
comfy-table = "7.1"
