[package]
name = "cc-switch-cli"
version = "3.8.2"
edition = "2021"
rust-version = "1.85.0"
description = "CLI tool for managing AI provider configurations"
license = "MIT"
repository = "https://github.com/farion1231/cc-switch"

[[bin]]
name = "cc-switch"
path = "src/main.rs"

[dependencies]
cc-switch-core = { path = "../cc-switch-core" }
clap = { workspace = true }
comfy-table = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
