[package]
name = "cc-switch-core"
version = "3.8.2"
edition = "2021"
rust-version = "1.85.0"
description = "Core library for CC Switch - shared between GUI and CLI"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
